--- a/vue-oa-multiple/src/theme/variables.scss
+++ b/vue-oa-multiple/src/theme/variables.scss
@@ -35,6 +35,7 @@ $bd-section1-color: rgba(25,31,37,.8);
 $bd-section2-color: rgba(25,31,37,.4);
 // 通用页面背景色
 $bg-color-page    : #f6f6f6;
+$bg-color-bage    : #f6f6f6e3;
 // 通用卡片背景色
 $bg-color-card    : #fff;
 // 顶部背景色
